Switch to protos API
